package com.undergraduate.cloud_food_corner;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class CloudFoodCornerApplication {

	public static void main(String[] args) {
		SpringApplication.run(CloudFoodCornerApplication.class, args);
	}

}
