package com.undergraduate.cloud_food_corner.controller;


import com.undergraduate.cloud_food_corner.model.Order;
import com.undergraduate.cloud_food_corner.repository.OrderRepository;
import jakarta.validation.Valid;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Controller;
import org.springframework.ui.Model;
import org.springframework.validation.BindingResult;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.RequestMapping;

@Controller
@RequestMapping("/order")
public class OrderController {
    private static final Logger logger = LoggerFactory.getLogger(OrderController.class);

    private final OrderRepository orderRepository;

    public OrderController(OrderRepository orderRepository) {
        this.orderRepository = orderRepository;
    }

    @GetMapping("/current")
    public String orderForm(Model model){
        model.addAttribute("order", new Order());
        return "orderForm";
    }

    @PostMapping
    public String processOrder(@Valid Order order, BindingResult result){
        if (result.hasErrors()) {
            logger.info("Validation errors: {}", result.getAllErrors());
            return "orderForm";
        }
        orderRepository.save(order);
        logger.info("Order submitted: {}", order);
        return "redirect:/";
    }
}
