package com.undergraduate.cloud_food_corner.repository;

import com.undergraduate.cloud_food_corner.model.Category;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import java.util.Optional;

@Repository
public interface CategoryRepository extends JpaRepository<Category, Long> {
    Optional<Category> findByType(Category.CategoryType type);
}