package com.undergraduate.cloud_food_corner.repository;

import com.undergraduate.cloud_food_corner.model.User;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface UserRepository extends JpaRepository<User, Long> {
    User findByUsername(String username);
}
