@startuml
title Bangaliana - Cloud Food Corner Architecture

!define ABSTRACT_COLOR #E1F5FE
!define ENTITY_COLOR #F3E5F5
!define SERVICE_COLOR #E8F5E9
!define CONTROLLER_COLOR #FFF3E0
!define REPO_COLOR #FCE4EC

skinparam packageStyle folder
skinparam backgroundColor #FAFAFA
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #333333
skinparam arrowColor #555555
skinparam noteFontSize 11
skinparam noteBackgroundColor #FFFACD
skinparam noteBorderColor #DAA520

package "Application" {
  class CloudFoodCornerApplication <<SpringBootApplication>> #FFF3E0
}

package "Configuration" {
  class SecurityConfig <<Configuration>> #FFF3E0 {
    - filterChain(HttpSecurity): SecurityFilterChain
    - passwordEncoder(): PasswordEncoder
  }
}

package "Controllers" {
  class HomeController <<Controller>> #FFF3E0 {
    + home(): String
  }

  class MenuController <<Controller>> #FFF3E0 {
    - menuService: MenuService
    + showMenu(Model): String
  }

  class OrderController <<Controller>> #FFF3E0 {
    - orderRepository: OrderRepository
    + orderForm(Model): String
    + processOrder(@Valid Order): String
  }

  class LoginController <<Controller>> #FFF3E0 {
    + showLogin(): String
  }

  class RegistrationController <<Controller>> #FFF3E0 {
    - userRepository: UserRepository
    - passwordEncoder: PasswordEncoder
    + showRegistration(): String
    + processRegistration(): String
  }
}

package "Services" {
  class MenuService <<Service>> #E8F5E9 {
    - menuItemRepository: MenuItemRepository
    + getAllItems(): List<MenuItem>
    + getByCategory(CategoryType): List<MenuItem>
  }

  class UserDetailsServiceImpl <<Service>> #E8F5E9 {
    - userRepository: UserRepository
    + loadUserByUsername(String): UserDetails
  }
}

package "Repositories" {
  interface CategoryRepository <<Repository>> #FCE4EC {
    findAll()
    save()
  }

  interface MenuItemRepository <<Repository>> #FCE4EC {
    findAll()
    save()
  }

  interface OrderRepository <<Repository>> #FCE4EC {
    findAll()
    save()
  }

  interface UserRepository <<Repository>> #FCE4EC {
    findByUsername(String)
    save()
  }
}

package "Models" {
  class Category <<Entity>> #F3E5F5 {
    - id: Long
    - name: String
    - type: CategoryType
  }

  enum CategoryType #F3E5F5 {
    MAIN_COURSE
    STREET_FOOD
    SWEETS
    BEVERAGES
  }

  class MenuItem <<Entity>> #F3E5F5 {
    - id: Long
    - name: String
    - description: String
    - price: double
    - category: Category
    - imageUrl: String
  }

  class Order <<Entity>> #F3E5F5 {
    - id: Long
    - customerName: String
    - deliveryAddress: String
    - phone: String
    - placedAt: LocalDateTime
    - items: List<MenuItem>
  }

  class User <<Entity>> #F3E5F5 {
    - id: Long
    - username: String
    - password: String
    - fullName: String
    - street: String
    - city: String
    - state: String
    - zip: String
    - phoneNumber: String
  }
}

' Relationships
MenuController --> MenuService : uses
MenuService --> MenuItemRepository : queries
OrderController --> OrderRepository : persists
RegistrationController --> UserRepository : saves user
RegistrationController --> SecurityConfig : uses encoder
LoginController ..> SecurityConfig : authenticates
UserDetailsServiceImpl --> UserRepository : loads user
UserDetailsServiceImpl ..> User : returns

CategoryRepository --> Category : manages
MenuItemRepository --> MenuItem : manages
MenuItemRepository --> Category : references
OrderRepository --> Order : manages
OrderRepository --> MenuItem : links
UserRepository --> User : manages

MenuItem --> Category : belongs to
Order --> MenuItem : contains
Category --> CategoryType : uses
User ..|> "<<UserDetails>>" : implements

' Notes
note right of SecurityConfig
  Configures form login authentication
  Permits public routes
  Requires authentication for orders
end note

note right of MenuService
  Business logic for menu operations
  Filters items by category
  Loads from database via repository
end note

note right of UserDetailsServiceImpl
  Spring Security integration
  Loads user from database
  Throws exception if not found
end note

note bottom of Order
  @ManyToMany relationship with MenuItem
  @CreationTimestamp for order tracking
  Form validation with @NotBlank, @Pattern
end note

@enduml